# ln2

./: .dockerignore  .gitignore  LICENSE  Makefile  Procfile  Procfile-Docker  Procfile.options  README.md  docker-sample.env  docker.env  sample.env
auth-service/: LICENSE  Makefile  auth-service.cabal  package.yaml  stack.yaml
db-gen-api/: Makefile  db-gen-api.cabal  package.yaml
deployment/: Dockerfile  docker-compose.yml  prod.docker-compose.yml
docker-master-server/: .dockerignore  LICENSE  Makefile  docker-master-server.cabal  package.yaml  stack.yaml
docker-secondary-agent/: Cargo.toml  Dockerfile  Makefile  README.md  docker-secondary-agent.cabal  package.yaml  stack.yaml
docker-secondary-agent/app/: Main.hs
docker-secondary-agent/deployment/: Dockerfile
docker-secondary-agent/src/: Rabbit.hs  Utils.hs  consumer.rs  main.rs
docker-secondary-agent/src/App/: Commands.hs  Parser.hs  Types.hs
docker-secondary-agent/src/Data/Models/: App.hs  QueueTask.hs  QueueTaskResponse.hs  Stand.hs  StandCheck.hs  StandCheckResult.hs
docker-secondary-agent/src/Deploy/: Docker.hs
docker-secondary-agent/src/deploy/: docker.rs
docker-secondary-agent/src/structs/: app_env.rs  check_message.rs  check_result.rs  mod.rs  queue_response.rs  queue_task.rs  stand_check.rs  stand_data.rs
docker-secondary-agent/test/: UtilsSpec.hs
docs/: task.md  vm.md
frontend/: Makefile  package.json  tailwind.config.js
ln2-common/: ln2-common.cabal  package.yaml
main-site/: Makefile  main-site.cabal  package.yaml  stack.yaml
md-render-api/: Makefile  md-render-api.cabal  (+1 more)
(+381 files in other folders)
