[package]
name = "docker-secondary-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.116"
serde = { version = "1.0", features = ["derive"] }
amqprs = "1.6.0"
async-trait = "0.1.80"
signal-hook = "0.3.17"
