[package]
name = "docker-secondary-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.116"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
docker-api = "0.14.0"
containers-api = "0.9.0"
futures-util = "0.3"
async-std = "1.12.0"
tokio-amqp = "2.0.0"
lapin = "2.3.4"
